--- a/README.html
+++ b/README.html
@@ -352,8 +352,8 @@ display: none;
 </div>
 
 
-<div id="public-opinion-in-arizona" class="section level1">
-<h1>Public Opinion in Arizona</h1>
+<div id="public-opinion-in-arizona-october-15-2024" class="section level1">
+<h1>Public Opinion in Arizona (October 15, 2024)</h1>
 <p>This repo includes code to clean, merge, analyze, recode, and
 visualize public opinion data for the Arizona Voter Project.</p>
 <div id="data-cleaning-formatting-estimation" class="section level2">
@@ -371,46 +371,37 @@ used in the visualizations</p>
 <div id="textttclean" class="section level3">
 <h3><span class="math inline">\(\texttt{clean/}\)</span></h3>
 <ul>
-<li><span class="math inline">\(\texttt{buildDataAVP22.R}\)</span>:
-Cleans the Western Data</li>
-<li><span class="math inline">\(\texttt{buildDataAVP22.R}\)</span>:
-Cleans the AVP Wave 1 Panel.</li>
-<li><span class="math inline">\(\texttt{buildDataAVP24.R}\)</span>:
-Cleans the AVP Wave 2 Panel. Each of these files exports a cleaned data
-set to the <span class="math inline">\(\texttt{data/}\)</span>
-folder.</li>
-<li><span class="math inline">\(\texttt{combineDat.R}\)</span>: Combines
-the three datasets in a variety of ways. Each file is represented as a
-long and wide form. I created a single file, with common questions
-across datasets. I also created a panel dataset, by joining respondents
-from wave 1 to wave 2.</li>
+<li>buildDataAVP22.R: Cleans the Western Data</li>
+<li>buildDataAVP22.R: Cleans the AVP Wave 1 Panel.</li>
+<li>buildDataAVP24.R: Cleans the AVP Wave 2 Panel. Each of these files
+exports a cleaned data set to the <span class="math inline">\(\texttt{data/}\)</span> folder.</li>
+<li>combineDat.R}$: Combines the three datasets in a variety of ways.
+Each file is represented as a long and wide form. I created a single
+file, with common questions across datasets. I also created a panel
+dataset, by joining respondents from wave 1 to wave 2.</li>
 </ul>
 </div>
 <div id="textttdata" class="section level3">
 <h3><span class="math inline">\(\texttt{data/}\)</span></h3>
 <ul>
-<li><span class="math inline">\(\texttt{avp_w1_wide.csv}\)</span>. Wave
-1 of the AVP survey in <em>wide</em> form, conducted by YouGov.</li>
-<li><span class="math inline">\(\texttt{avp_w1_long.csv}\)</span>. Wave
-1 of the AVP survey in <em>long</em> form, conducted by YouGov.</li>
-<li><span class="math inline">\(\texttt{avp_w2_wide.csv}\)</span>. Wave
-2 of the AVP survey in <em>wide</em> form, conducted by YouGov.</li>
-<li><span class="math inline">\(\texttt{avp_w2_long.csv}\)</span>. Wave
-2 of the AVP survey in <em>long</em> form, conducted by YouGov.</li>
-<li><span class="math inline">\(\texttt{datWestern2020_long.csv}\)</span>. The
-Western Data in <em>long</em> form.</li>
-<li><span class="math inline">\(\texttt{datWestern2020_wide.csv}\)</span>. The
-Western Data in <em>wide</em> form, conducted by YouGov.</li>
-<li><span class="math inline">\(\texttt{avpLong.csv}\)</span>. Truncated
-three files in <em>long</em> form.</li>
-<li><span class="math inline">\(\texttt{avpWide.csv}\)</span>. Truncated
-three files in <em>long</em> form.</li>
-<li><span class="math inline">\(\texttt{avp_panel.csv}\)</span>. The two
-wave panel data from Arizona in <em>wide</em> form, conducted by
-YouGov.</li>
-<li><span class="math inline">\(\texttt{avp_w1w2_long.csv}\)</span>. The
-two wave panel data from Arizona in <em>long</em> form, conducted by
-YouGov.</li>
+<li>avp_w1_wide.csv. Wave 1 of the AVP survey in <em>wide</em> form,
+conducted by YouGov.</li>
+<li>avp_w1_long.csv. Wave 1 of the AVP survey in <em>long</em> form,
+conducted by YouGov.</li>
+<li>avp_w2_wide.csv. Wave 2 of the AVP survey in <em>wide</em> form,
+conducted by YouGov.</li>
+<li>avp_w2_long.csv. Wave 2 of the AVP survey in <em>long</em> form,
+conducted by YouGov.</li>
+<li>datWestern2020_long.csv. The Western Data in <em>long</em>
+form.</li>
+<li>datWestern2020_wide.csv. The Western Data in <em>wide</em> form,
+conducted by YouGov.</li>
+<li>avpLong.csv. Truncated three files in <em>long</em> form.</li>
+<li>avpWide.csv. Truncated three files in <em>long</em> form.</li>
+<li>avp_panel.csv. The two wave panel data from Arizona in <em>wide</em>
+form, conducted by YouGov.</li>
+<li>avp_w1w2_long.csv. The two wave panel data from Arizona in
+<em>long</em> form, conducted by YouGov.</li>
 </ul>
 </div>
 </div>
@@ -419,8 +410,8 @@ YouGov.</li>
 <h1>Visualization</h1>
 <div id="textttshiny" class="section level3">
 <h3><span class="math inline">\(\texttt{shiny/}\)</span></h3>
-<p><a href="https://viz.datascience.arizona.edu/avp_democracy/"><span class="math inline">\(\texttt{shiny/contestation}\)</span></a>. Shiny
-app visualizing electoral contestion with the Wave I AVP data.</p>
+<p><a href="https://viz.datascience.arizona.edu/avp_democracy/">shiny/contestation</a>.
+Shiny app visualizing electoral contestion with the Wave I AVP data.</p>
 </div>
 <div id="data-information" class="section level2">
 <h2>Data Information</h2>
@@ -486,10 +477,6 @@ supplements, the 2020 National Election Pool (NEP) exit poll, and the
 2020 CES surveys, including demographics and 2020 presidential vote. The
 sample includes sample-weights to account for sampling and
 non-response.</p>
-<ol start="2" style="list-style-type: decimal">
-<li>The AVP Wave 1 panel</li>
-<li>The AVP Wave 2 panel</li>
-</ol>
 </div>
 </div>
 </div>
